# SFMLGame

./: CMakeLists.txt  README.md
include/: Entity.h  EntityManager.h  config.h
src/: Entity.cpp  EntityManager.cpp  config.cpp  main.cpp
